--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
 .env
 .env.backup
 .env.production
@@ -15,5 +14,6 @@ auth.json
 npm-debug.log
 yarn-error.log
 /.fleet
-/.idea
 /.vscode
+vendor/
+idea/
